Velcro test First SandBox/src/objects/QuoteLineItem.object
<CustomObject>
    <fields>
        <fullName>Adhesive__c</fullName>
        <label>Adhesive</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>32</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>43</fullName>
                </value>
                <value>
                    <fullName>44</fullName>
                </value>
                <value>
                    <fullName>51</fullName>
                </value>
                <value>
                    <fullName>52</fullName>
                </value>
                <value>
                    <fullName>64</fullName>
                </value>
                <value>
                    <fullName>72</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
                <value>
                    <fullName>84</fullName>
                </value>
                <value>
                    <fullName>89</fullName>
                </value>
                <value>
                    <fullName>98</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dye to Match</fullName>
                </value>
                <value>
                    <fullName>Average Green</fullName>
                </value>
                <value>
                    <fullName>Beach Tan</fullName>
                </value>
                <value>
                    <fullName>Beige</fullName>
                </value>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>Border Patrol Green</fullName>
                </value>
                <value>
                    <fullName>Brown</fullName>
                </value>
                <value>
                    <fullName>Camouflage Green</fullName>
                </value>
                <value>
                    <fullName>Coachman Green</fullName>
                </value>
                <value>
                    <fullName>Coyote</fullName>
                </value>
                <value>
                    <fullName>Dark Camouflage</fullName>
                </value>
                <value>
                    <fullName>Dark Drown</fullName>
                </value>
                <value>
                    <fullName>Dark Olive</fullName>
                </value>
                <value>
                    <fullName>Dark Olive Drab</fullName>
                </value>
                <value>
                    <fullName>Desert Sand</fullName>
                </value>
                <value>
                    <fullName>Desert Tan</fullName>
                </value>
                <value>
                    <fullName>Emerald Green</fullName>
                </value>
                <value>
                    <fullName>Flag Red</fullName>
                </value>
                <value>
                    <fullName>Foliage Green</fullName>
                </value>
                <value>
                    <fullName>Grey</fullName>
                </value>
                <value>
                    <fullName>Hi-garde</fullName>
                </value>
                <value>
                    <fullName>Hunter Green</fullName>
                </value>
                <value>
                    <fullName>Ink Blue</fullName>
                </value>
                <value>
                    <fullName>Khaki</fullName>
                </value>
                <value>
                    <fullName>Lemon</fullName>
                </value>
                <value>
                    <fullName>Light Brown</fullName>
                </value>
                <value>
                    <fullName>Light Coyote</fullName>
                </value>
                <value>
                    <fullName>Light Grey</fullName>
                </value>
                <value>
                    <fullName>Light Navy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dye_to_Match__c</fullName>
        <inlineHelpText>Does this quote request need a &quot;Dye to Match&quot; cost added?</inlineHelpText>
        <label>Dye to Match?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frequency_of_Delivery__c</fullName>
        <label>Frequency of Delivery</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hooks__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hook</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.Name</field>
                <operation>notEqual</operation>
                <value>Part Number</value>
            </filterItems>
            <filterItems>
                <field>Product2.Name</field>
                <operation>notEqual</operation>
                <value>New Product</value>
            </filterItems>
            <filterItems>
                <field>Product2.Name</field>
                <operation>notEqual</operation>
                <value>No Loop</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Quote Line Items (Hook)</relationshipLabel>
        <relationshipName>Quote_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loop__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loop</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.Name</field>
                <operation>notEqual</operation>
                <value>New Product</value>
            </filterItems>
            <filterItems>
                <field>Product2.Name</field>
                <operation>notEqual</operation>
                <value>Part Number</value>
            </filterItems>
            <filterItems>
                <field>Product2.Name</field>
                <operation>notEqual</operation>
                <value>No Hook</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Quote Line Items (Loop)</relationshipLabel>
        <relationshipName>Quote_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <inlineHelpText>If part number was selected as the product, the part number must be populated.</inlineHelpText>
        <label>Part Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceRationale__c</fullName>
        <label>Rationale For Price</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competition</fullName>
                </value>
                <value>
                    <fullName>Customer Budget</fullName>
                </value>
                <value>
                    <fullName>Currently buy similar item</fullName>
                </value>
                <value>
                    <fullName>Market Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PutUp__c</fullName>
        <label>Put Up</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <label>Width</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1&quot;</fullName>
                </value>
                <value>
                    <fullName>1/2&quot;</fullName>
                </value>
                <value>
                    <fullName>1/4&quot;</fullName>
                </value>
                <value>
                    <fullName>10&quot;</fullName>
                </value>
                <value>
                    <fullName>100mm</fullName>
                </value>
                <value>
                    <fullName>107mm</fullName>
                </value>
                <value>
                    <fullName>10mm</fullName>
                </value>
                <value>
                    <fullName>11&quot;</fullName>
                </value>
                <value>
                    <fullName>11/16&quot;</fullName>
                </value>
                <value>
                    <fullName>1-1/2&quot;</fullName>
                </value>
                <value>
                    <fullName>1-1/4&quot;</fullName>
                </value>
                <value>
                    <fullName>110mm</fullName>
                </value>
                <value>
                    <fullName>12&quot;</fullName>
                </value>
                <value>
                    <fullName>12.5mm</fullName>
                </value>
                <value>
                    <fullName>120mm</fullName>
                </value>
                <value>
                    <fullName>12-1/2&quot;</fullName>
                </value>
                <value>
                    <fullName>12-3/4&quot;</fullName>
                </value>
                <value>
                    <fullName>12mm</fullName>
                </value>
                <value>
                    <fullName>13&quot;</fullName>
                </value>
                <value>
                    <fullName>1-3/4&quot;</fullName>
                </value>
                <value>
                    <fullName>1-3/8&quot;</fullName>
                </value>
                <value>
                    <fullName>135mm</fullName>
                </value>
                <value>
                    <fullName>1-39/64&quot;</fullName>
                </value>
                <value>
                    <fullName>13mm</fullName>
                </value>
                <value>
                    <fullName>14&quot;</fullName>
                </value>
                <value>
                    <fullName>14-3/16&quot;</fullName>
                </value>
                <value>
                    <fullName>1-5/8&quot;</fullName>
                </value>
                <value>
                    <fullName>150mm</fullName>
                </value>
                <value>
                    <fullName>152mm</fullName>
                </value>
                <value>
                    <fullName>15mm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>validateAllFields</fullName>
        <active>false</active>
        <description>Validates Quote Request on Save</description>
        <errorConditionFormula>IF(Product2.Name =&quot;New Product&quot;,
OR( IsPickVal(Adhesive__c,&quot;&quot;), IsPickVal(Color__c,&quot;&quot;), IsBlank(Frequency_of_Delivery__c),  isBlank(Loop__c), isBlank(Hooks__c),isBlank(PutUp__c),isPickVal( PriceRationale__c ,&quot;&quot;) , IsPickVal(Width__c,&quot;&quot;)  ),
IsBlank( Part_Number__c))</errorConditionFormula>
        <errorMessage>All Fields must be entered to save Quote Line Item.</errorMessage>
    </validationRules>
</CustomObject>